--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -124,3 +124,5 @@ obj-$(CONFIG_DUMP_XBL_LOG) += dump_boot_log.o
 obj-$(CONFIG_QCOM_CX_IPEAK) += cx_ipeak.o
 # GNSS driver
 obj-$(CONFIG_GNSS_SIRF)		+= gnsssirf/
+obj-$(CONFIG_MSM_SEB) += slate_events_bridge.o
+obj-$(CONFIG_MSM_SEB_RPMSG) += slate_events_bridge_rpmsg.o
