defconfig: adjust for initial build
enable wifi driver
build 2nd touchscreen drivers, supposedly for rog 5 ultimate touch zones on the back cover as modules as those conflict when linking the kernel as inbuilt drivers

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-qgki-perf"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -2245,7 +2245,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
 # CONFIG_TOUCHSCREEN_FTS is not set
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch_rog"
 CONFIG_TOUCHSCREEN_ROG=y
-CONFIG_TOUCHSCREEN2_ROG=y
+CONFIG_TOUCHSCREEN2_ROG=m
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
@@ -2281,7 +2281,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 # CONFIG_INPUT_HISI_POWERKEY is not set
 CONFIG_INPUT_SX932X=y
-CONFIG_INPUT_SX932X_2ND=y
+CONFIG_INPUT_SX932X_2ND=m
 # CONFIG_RMI4_CORE is not set
 CONFIG_GOODIX_FINGERPRINT=y
 
@@ -6655,3 +6655,12 @@ CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
 CONFIG_CORESIGHT_TGU=y
 CONFIG_CORESIGHT_OST=y
 # end of Kernel hacking
+
+
+#
+# Qualcomm Atheros CLD WLAN module
+#
+CONFIG_QCA_CLD_WLAN=y
+CONFIG_QCA_CLD_WLAN_PROFILE="default"
+# CONFIG_GOLDFISH is not set
+# CONFIG_CHROME_PLATFORMS is not set
