--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -297,7 +297,7 @@ CONFIG_ARCH_LAHAINA=y
 # CONFIG_ARCH_QTI_VM is not set
 # CONFIG_ARCH_SHIMA is not set
 # CONFIG_ARCH_HOLI is not set
-# CONFIG_ARCH_YUPIK is not set
+CONFIG_ARCH_YUPIK=y
 # CONFIG_ARCH_SA8155 is not set
 # CONFIG_ARCH_SA8195 is not set
 # CONFIG_ARCH_REALTEK is not set
