--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_5"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_6"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -28,9 +28,9 @@ CONFIG_SWAP=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USELIB is not set
-CONFIG_AUDIT=y
+# CONFIG_AUDIT is not set
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
-CONFIG_AUDITSYSCALL=y
+# CONFIG_AUDITSYSCALL is not set
 
 #
 # IRQ subsystem
@@ -83,6 +83,8 @@ CONFIG_PREEMPTION=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_HAVE_MOVE_PUD=y
+CONFIG_HAVE_MOVE_PMD=y
 CONFIG_HAVE_SCHED_AVG_IRQ=y
 CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -117,9 +119,9 @@ CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_IKHEADERS=y
-CONFIG_LOG_BUF_SHIFT=17
+CONFIG_LOG_BUF_SHIFT=19
 # CONFIG_CONSOLE_FLUSH_ON_HOTPLUG is not set
-CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
+CONFIG_LOG_CPU_MAX_BUF_SHIFT=19
 CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=13
 CONFIG_GENERIC_SCHED_CLOCK=y
 
@@ -451,9 +453,9 @@ CONFIG_EFI=y
 # CONFIG_DMI is not set
 # end of Boot options
 
-# CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
-CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
-# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
+CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
+# CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
 #
 # Power management options
@@ -472,7 +474,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
@@ -634,7 +636,8 @@ CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
-CONFIG_HAVE_RCU_TABLE_FREE=y
+CONFIG_MMU_GATHER_TABLE_FREE=y
+CONFIG_MMU_GATHER_RCU_TABLE_FREE=y
 CONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG=y
 CONFIG_HAVE_ALIGNED_STRUCT_PAGE=y
 CONFIG_HAVE_CMPXCHG_LOCAL=y
@@ -909,9 +912,6 @@ CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
 # CONFIG_INET_RAW_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
-# CONFIG_TCP_CONG_ADVANCED is not set
-CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1010,7 +1010,7 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_CT=y
 CONFIG_NETFILTER_XT_TARGET_DSCP=y
-# CONFIG_NETFILTER_XT_TARGET_HL is not set
+CONFIG_NETFILTER_XT_TARGET_HL=y
 # CONFIG_NETFILTER_XT_TARGET_HMARK is not set
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
@@ -1113,7 +1113,7 @@ CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
-# CONFIG_IP_NF_TARGET_TTL is not set
+CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
 CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
@@ -4500,19 +4500,7 @@ CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
-CONFIG_EDAC=y
-CONFIG_EDAC_QGKI=y
-CONFIG_EDAC_LEGACY_SYSFS=y
-# CONFIG_EDAC_DEBUG is not set
-# CONFIG_EDAC_THUNDERX is not set
-# CONFIG_EDAC_XGENE is not set
-# CONFIG_EDAC_PANIC_ON_CE is not set
-CONFIG_EDAC_KRYO_ARM64=y
-# CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE is not set
-CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
-CONFIG_EDAC_QCOM=y
-# CONFIG_EDAC_QCOM_LLCC_PANIC_ON_CE is not set
-CONFIG_EDAC_QCOM_LLCC_PANIC_ON_UE=y
+# CONFIG_EDAC is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
@@ -5151,7 +5139,7 @@ CONFIG_QTI_SYSTEM_PM=y
 # CONFIG_MSM_IDLE_STATS is not set
 CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_QTI_DDR_STATS_LOG=y
-CONFIG_MSM_JTAGV8=y
+# CONFIG_MSM_JTAGV8 is not set
 CONFIG_QCOM_FSA4480_I2C=y
 CONFIG_QCOM_SOC_SLEEP_STATS=y
 CONFIG_QCOM_CDSP_RM=y
@@ -5717,7 +5705,7 @@ CONFIG_QCOM_LLCC_PMU=y
 # CONFIG_ARM_SPE_PMU is not set
 # end of Performance monitor support
 
-CONFIG_RAS=y
+# CONFIG_RAS is not set
 
 #
 # Android
@@ -6053,9 +6041,9 @@ CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_SECURITY_SAFESETID is not set
 # CONFIG_SECURITY_LOCKDOWN_LSM is not set
-CONFIG_INTEGRITY=y
+# CONFIG_INTEGRITY is not set
 # CONFIG_INTEGRITY_SIGNATURE is not set
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
@@ -6303,9 +6291,9 @@ CONFIG_CRC32_SLICEBY8=y
 CONFIG_LIBCRC32C=y
 CONFIG_CRC8=y
 CONFIG_XXHASH=y
-CONFIG_AUDIT_GENERIC=y
+# CONFIG_AUDIT_GENERIC is not set
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
-CONFIG_AUDIT_COMPAT_GENERIC=y
+# CONFIG_AUDIT_COMPAT_GENERIC is not set
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
@@ -6550,9 +6538,9 @@ CONFIG_RING_BUFFER=y
 CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_IPC_LOGGING=y
-CONFIG_QCOM_RTB=y
-CONFIG_QCOM_RTB_QGKI=y
-CONFIG_QCOM_RTB_SEPARATE_CPUS=y
+# CONFIG_QCOM_RTB is not set
+# CONFIG_QCOM_RTB_QGKI is not set
+# CONFIG_QCOM_RTB_SEPARATE_CPUS is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
@@ -6656,11 +6644,47 @@ CONFIG_CORESIGHT_TGU=y
 CONFIG_CORESIGHT_OST=y
 # end of Kernel hacking
 
+#
+# Custom Edits
+#
 
 #
 # Qualcomm Atheros CLD WLAN module
 #
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCA_CLD_WLAN_PROFILE="default"
-# CONFIG_GOLDFISH is not set
-# CONFIG_CHROME_PLATFORMS is not set
+
+#
+# TCP
+#
+
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_DCTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_RENO=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_AGILESD=y
+CONFIG_DEFAULT_BBR=y
+CONFIG_DEFAULT_TCP_CONG="bbr"
+
+#
+# Wakelock Blocker
+#
+# CONFIG_BOEFFLA_WL_BLOCKER is not set
+
+CONFIG_HID_PLAYSTATION=y
+CONFIG_PLAYSTATION_FF=y
+
+CONFIG_DISABLE_TRACE_PRINTK=y
