defconfig: bump and disable debugging, unneeded errata etc
including https://github.com/freak07/Kirisakura_SAKE_Zenfone_8/commit/bd1d26a1d7aadcd00efaae6cb1375eb9f0c03bbf

except disabled sleep debug

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_6"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_7"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -327,32 +327,32 @@ CONFIG_ARCH_YUPIK=y
 # ARM errata workarounds via the alternatives framework
 #
 CONFIG_ARM64_WORKAROUND_CLEAN_CACHE=y
-CONFIG_ARM64_ERRATUM_826319=y
-CONFIG_ARM64_ERRATUM_827319=y
-CONFIG_ARM64_ERRATUM_824069=y
-CONFIG_ARM64_ERRATUM_819472=y
-CONFIG_ARM64_ERRATUM_832075=y
-CONFIG_ARM64_ERRATUM_845719=y
-CONFIG_ARM64_ERRATUM_843419=y
+# CONFIG_ARM64_ERRATUM_826319 is not set
+# CONFIG_ARM64_ERRATUM_827319 is not set
+# CONFIG_ARM64_ERRATUM_824069 is not set
+# CONFIG_ARM64_ERRATUM_819472 is not set
+# CONFIG_ARM64_ERRATUM_832075 is not set
+# CONFIG_ARM64_ERRATUM_845719 is not set
+# CONFIG_ARM64_ERRATUM_843419 is not set
 CONFIG_ARM64_ERRATUM_1024718=y
-CONFIG_ARM64_ERRATUM_1418040=y
-CONFIG_ARM64_ERRATUM_1165522=y
-CONFIG_ARM64_ERRATUM_1286807=y
-CONFIG_ARM64_ERRATUM_1463225=y
-CONFIG_ARM64_ERRATUM_1542419=y
-CONFIG_CAVIUM_ERRATUM_22375=y
-CONFIG_CAVIUM_ERRATUM_23154=y
-CONFIG_CAVIUM_ERRATUM_27456=y
-CONFIG_CAVIUM_ERRATUM_30115=y
-CONFIG_CAVIUM_TX2_ERRATUM_219=y
-CONFIG_QCOM_FALKOR_ERRATUM_1003=y
-CONFIG_ARM64_WORKAROUND_REPEAT_TLBI=y
-CONFIG_QCOM_FALKOR_ERRATUM_1009=y
-CONFIG_QCOM_QDF2400_ERRATUM_0065=y
-CONFIG_SOCIONEXT_SYNQUACER_PREITS=y
-CONFIG_HISILICON_ERRATUM_161600802=y
-CONFIG_QCOM_FALKOR_ERRATUM_E1041=y
-CONFIG_FUJITSU_ERRATUM_010001=y
+# CONFIG_ARM64_ERRATUM_1418040 is not set
+# CONFIG_ARM64_ERRATUM_1165522 is not set
+# CONFIG_ARM64_ERRATUM_1286807 is not set
+# CONFIG_ARM64_ERRATUM_1463225 is not set
+# CONFIG_ARM64_ERRATUM_1542419 is not set
+# CONFIG_CAVIUM_ERRATUM_22375 is not set
+# CONFIG_CAVIUM_ERRATUM_23154 is not set
+# CONFIG_CAVIUM_ERRATUM_27456 is not set
+# CONFIG_CAVIUM_ERRATUM_30115 is not set
+# CONFIG_CAVIUM_TX2_ERRATUM_219 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1003 is not set
+# CONFIG_ARM64_WORKAROUND_REPEAT_TLBI is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1009 is not set
+# CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
+# CONFIG_SOCIONEXT_SYNQUACER_PREITS is not set
+# CONFIG_HISILICON_ERRATUM_161600802 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_E1041 is not set
+# CONFIG_FUJITSU_ERRATUM_010001 is not set
 # end of ARM errata workarounds via the alternatives framework
 
 CONFIG_ARM64_4K_PAGES=y
@@ -366,7 +366,7 @@ CONFIG_ARM64_PA_BITS=48
 # CONFIG_CPU_BIG_ENDIAN is not set
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-CONFIG_NR_CPUS=32
+CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
@@ -398,10 +398,10 @@ CONFIG_PARAVIRT=y
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_UNMAP_KERNEL_AT_EL0=y
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
-CONFIG_HARDEN_EL2_VECTORS=y
-CONFIG_ARM64_SSBD=y
+# CONFIG_HARDEN_EL2_VECTORS is not set
+# CONFIG_ARM64_SSBD is not set
 CONFIG_RODATA_FULL_DEFAULT_ENABLED=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
@@ -2379,7 +2379,7 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
 CONFIG_ADSPRPC_QGKI=y
-CONFIG_MSM_RDBG=y
+# CONFIG_MSM_RDBG is not set
 # end of Character devices
 
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
@@ -4998,6 +4998,7 @@ CONFIG_ARM_SMMU=y
 # CONFIG_ARM_SMMU_LEGACY_DT_BINDINGS is not set
 CONFIG_ARM_SMMU_DISABLE_BYPASS_BY_DEFAULT=y
 CONFIG_ARM_SMMU_SKIP_MAP_POWER_ON=y
+CONFIG_ARM_SMMU_POWER_OFF_AFTER_UNMAP=y
 # CONFIG_ARM_SMMU_V3 is not set
 # CONFIG_ARM_SMMU_SELFTEST is not set
 # CONFIG_IOMMU_TLBSYNC_DEBUG is not set
@@ -5092,7 +5093,7 @@ CONFIG_PANIC_ON_SSR_NOTIF_TIMEOUT=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_SERVICE_LOCATOR=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
-CONFIG_MSM_BOOT_STATS=y
+# CONFIG_MSM_BOOT_STATS is not set
 CONFIG_QCOM_QMI_HELPERS=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_QCOM_QFPROM_SYS=y
@@ -5104,19 +5105,19 @@ CONFIG_QCOM_RPMHPD=y
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_SMEM=y
 # CONFIG_QCOM_SMD_RPM is not set
-CONFIG_QCOM_MEMORY_DUMP_V2=y
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_QCOM_SMEM_STATE=y
 CONFIG_QCOM_SMP2P=y
 CONFIG_QCOM_SMSM=y
 CONFIG_QCOM_SOCINFO=y
 # CONFIG_QCOM_WCNSS_CTRL is not set
 CONFIG_QCOM_DCC_V2=y
-CONFIG_QCOM_MINIDUMP=y
+# CONFIG_QCOM_MINIDUMP is not set
 # CONFIG_QCOM_DYN_MINIDUMP_STACK is not set
 # CONFIG_QCOM_MINIDUMP_FTRACE is not set
 # CONFIG_QCOM_MINIDUMP_PANIC_DUMP is not set
-CONFIG_MINIDUMP_MAX_ENTRIES=200
-CONFIG_QCOM_MICRODUMP=y
+# CONFIG_MINIDUMP_MAX_ENTRIES is not set
+# CONFIG_QCOM_MICRODUMP is not set
 # CONFIG_QCOM_APR is not set
 CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_QCOM_GLINK_PKT=y
@@ -5130,7 +5131,7 @@ CONFIG_MSM_GLINK_SSR=y
 CONFIG_QTI_PMIC_GLINK=y
 # CONFIG_QTI_BATTERY_GLINK_DEBUG is not set
 CONFIG_QTI_ALTMODE_GLINK=y
-CONFIG_QTI_PMIC_PON_LOG=y
+# CONFIG_QTI_PMIC_PON_LOG is not set
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QGKI=y
 CONFIG_MSM_PM=y
@@ -6387,14 +6388,14 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DEBUG_CONSOLE_UNHASHED_POINTERS is not set
-CONFIG_DYNAMIC_DEBUG_CORE=y
+# CONFIG_DYNAMIC_DEBUG_CORE is not set
 # CONFIG_DEBUG_MODULE_LOAD_INFO is not set
 # end of printk and dmesg options
 
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
@@ -6418,7 +6419,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
 CONFIG_MAGIC_SYSRQ_SERIAL=y
 CONFIG_DEBUG_KERNEL=y
-CONFIG_DEBUG_MISC=y
+# CONFIG_DEBUG_MISC is not set
 
 #
 # Memory Debugging
@@ -6430,14 +6431,7 @@ CONFIG_DEBUG_MISC=y
 # CONFIG_PAGE_POISONING is not set
 # CONFIG_DEBUG_PAGE_REF is not set
 # CONFIG_DEBUG_RODATA_TEST is not set
-CONFIG_DEBUG_OBJECTS=y
-# CONFIG_DEBUG_OBJECTS_SELFTEST is not set
-# CONFIG_DEBUG_OBJECTS_FREE is not set
-CONFIG_DEBUG_OBJECTS_TIMERS=y
-# CONFIG_DEBUG_OBJECTS_WORK is not set
-# CONFIG_DEBUG_OBJECTS_RCU_HEAD is not set
-# CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER is not set
-CONFIG_DEBUG_OBJECTS_ENABLE_DEFAULT=1
+# CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
@@ -6682,9 +6676,10 @@ CONFIG_DEFAULT_TCP_CONG="bbr"
 #
 # Wakelock Blocker
 #
-# CONFIG_BOEFFLA_WL_BLOCKER is not set
+CONFIG_BOEFFLA_WL_BLOCKER=y
 
 CONFIG_HID_PLAYSTATION=y
 CONFIG_PLAYSTATION_FF=y
 
 CONFIG_DISABLE_TRACE_PRINTK=y
+CONFIG_QCOM_IOMMU_TLBI_QUIRKS=y
