defconfig: bump and enable ddr cooling device

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_8"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_9"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -2899,6 +2899,7 @@ CONFIG_QTI_SDPM_CLOCK_MONITOR=y
 # CONFIG_REGULATOR_COOLING_DEVICE is not set
 # CONFIG_QTI_LIMITS_ISENSE_CDSP is not set
 CONFIG_QTI_CPU_HOTPLUG_COOLING_DEVICE=y
+CONFIG_QTI_DDR_COOLING_DEVICE=y
 # end of Qualcomm thermal drivers
 
 CONFIG_QTI_THERMAL=y
