defconfig: bump and disable sleep logging

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_9"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_10"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -5140,11 +5140,11 @@ CONFIG_MSM_PM=y
 CONFIG_QTI_SYSTEM_PM=y
 # CONFIG_QTI_HW_MEMLAT is not set
 # CONFIG_MSM_IDLE_STATS is not set
-CONFIG_QTI_RPM_STATS_LOG=y
-CONFIG_QTI_DDR_STATS_LOG=y
+# CONFIG_QTI_RPM_STATS_LOG is not set
+# CONFIG_QTI_DDR_STATS_LOG is not set
 # CONFIG_MSM_JTAGV8 is not set
 CONFIG_QCOM_FSA4480_I2C=y
-CONFIG_QCOM_SOC_SLEEP_STATS=y
+# CONFIG_QCOM_SOC_SLEEP_STATS is not set
 CONFIG_QCOM_CDSP_RM=y
 # CONFIG_CDSPRM_VTCM_DYNAMIC_DEBUG is not set
 # CONFIG_QCOM_WDT_CORE is not set
