defconfig: bump and enable coresight placeholder, disable logging

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_14"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_15"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -2514,7 +2514,7 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 # CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
-CONFIG_SPMI_QTI_GLINK_DEBUG=y
+# CONFIG_SPMI_QTI_GLINK_DEBUG is not set
 # CONFIG_HSI is not set
 # CONFIG_PPS is not set
 
@@ -6533,7 +6533,7 @@ CONFIG_TRACE_CLOCK=y
 CONFIG_RING_BUFFER=y
 CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
-CONFIG_IPC_LOGGING=y
+# CONFIG_IPC_LOGGING is not set
 # CONFIG_QCOM_RTB is not set
 # CONFIG_QCOM_RTB_QGKI is not set
 # CONFIG_QCOM_RTB_SEPARATE_CPUS is not set
@@ -6617,27 +6617,7 @@ CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_DEBUG_EFI is not set
 # CONFIG_ARM64_RELOC_TEST is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_QGKI=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-# CONFIG_CORESIGHT_CATU is not set
-# CONFIG_CORESIGHT_SINK_TPIU is not set
-# CONFIG_CORESIGHT_SINK_ETBV10 is not set
-CONFIG_CORESIGHT_SOURCE_ETM4X=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-# CONFIG_CORESIGHT_TPDM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
-CONFIG_CORESIGHT_TGU=y
-CONFIG_CORESIGHT_OST=y
+# CONFIG_CORESIGHT is not set
 # end of Kernel hacking
 
 #
@@ -6685,3 +6665,9 @@ CONFIG_PLAYSTATION_FF=y
 
 CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_QCOM_IOMMU_TLBI_QUIRKS=y
+
+#
+# Coresight_Placeholder
+#
+CONFIG_CORESIGHT_PLACEHOLDER=y
+CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
