defconfig: bump and enable msm_performance in qgki profile
otherwise the perf daemon will not handle gaming hints correctly and cause games to lag.

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1.0.0"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1.0.1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -5124,6 +5124,7 @@ CONFIG_QCOM_DCC_V2=y
 CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_QCOM_GLINK_PKT=y
 CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_PERFORMANCE_QGKI=y
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_SENSORS_SSC=y
