defconfig: bump and set vmstat interval
(cherry picked from commit b4c30fba9a9a51f6ad8768a59168a53d226f0402)

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 CONFIG_UAPI_HEADER_TEST=y
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1.2.0"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1.2.1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -857,6 +857,7 @@ CONFIG_OOM_TASK_PRIORITY_ADJ_LIMIT=0
 
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_MULTIPLE_KSWAPD=y
+CONFIG_VMSTAT_INTERVAL=20
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 CONFIG_NET_INGRESS=y
