defconfig: bump and sync

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 # CONFIG_UAPI_HEADER_TEST is not set
-CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1.3.8"
+CONFIG_LOCALVERSION="-Kirisakura_Anakin_R_1.4.0"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -5195,7 +5195,7 @@ CONFIG_QCOM_FSA4480_I2C=y
 # CONFIG_QCOM_SOC_SLEEP_STATS is not set
 CONFIG_QCOM_CDSP_RM=y
 # CONFIG_CDSPRM_VTCM_DYNAMIC_DEBUG is not set
-# CONFIG_QCOM_WDT_CORE is not set
+CONFIG_QCOM_WDT_CORE=y
 CONFIG_MSM_SPCOM=y
 # CONFIG_QCOM_EUD is not set
 CONFIG_QCOM_SMCINVOKE=y
