--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -5205,7 +5205,10 @@ CONFIG_QTI_CRYPTO_COMMON=y
 # CONFIG_QTI_CRYPTO_TZ is not set
 CONFIG_QTI_HW_KEY_MANAGER=y
 CONFIG_QCOM_RTIC=y
-# CONFIG_ICNSS2 is not set
+CONFIG_ICNSS2=y
+# CONFIG_ICNSS2_DEBUG is not set
+CONFIG_ICNSS2_QMI=y
+CONFIG_ICNSS2_RESTART_LEVEL_NOTIF=y
 # end of Qualcomm SoC drivers
 
 CONFIG_SUNXI_SRAM=y
