--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -278,7 +278,7 @@ CONFIG_ARCH_PROC_KCORE_TEXT=y
 #
 # CONFIG_ARCH_ACTIONS is not set
 # CONFIG_ARCH_AGILEX is not set
-CONFIG_ARCH_SUNXI=y
+# CONFIG_ARCH_SUNXI is not set
 # CONFIG_ARCH_ALPINE is not set
 # CONFIG_ARCH_BCM2835 is not set
 # CONFIG_ARCH_BCM_IPROC is not set
@@ -289,7 +289,7 @@ CONFIG_ARCH_SUNXI=y
 # CONFIG_ARCH_K3 is not set
 # CONFIG_ARCH_LAYERSCAPE is not set
 # CONFIG_ARCH_LG1K is not set
-CONFIG_ARCH_HISI=y
+# CONFIG_ARCH_HISI is not set
 # CONFIG_ARCH_MEDIATEK is not set
 # CONFIG_ARCH_MESON is not set
 # CONFIG_ARCH_MVEBU is not set
@@ -299,7 +299,7 @@ CONFIG_ARCH_LAHAINA=y
 # CONFIG_ARCH_QTI_VM is not set
 # CONFIG_ARCH_SHIMA is not set
 # CONFIG_ARCH_HOLI is not set
-CONFIG_ARCH_YUPIK=y
+# CONFIG_ARCH_YUPIK is not set
 # CONFIG_ARCH_SA8155 is not set
 # CONFIG_ARCH_SA8195 is not set
 # CONFIG_ARCH_REALTEK is not set
