defconfig: sync with 226

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -1421,12 +1421,14 @@ CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_DOMAINS_GENERIC=y
 CONFIG_PCI_SYSCALL=y
 CONFIG_PCIEPORTBUS=y
-# CONFIG_PCIEAER is not set
+CONFIG_PCIEAER=y
+# CONFIG_PCIEAER_INJECT is not set
+# CONFIG_PCIE_ECRC is not set
 CONFIG_PCIEASPM=y
 # CONFIG_PCIEASPM_DEBUG is not set
-CONFIG_PCIEASPM_DEFAULT=y
+# CONFIG_PCIEASPM_DEFAULT is not set
 # CONFIG_PCIEASPM_POWERSAVE is not set
-# CONFIG_PCIEASPM_POWER_SUPERSAVE is not set
+CONFIG_PCIEASPM_POWER_SUPERSAVE=y
 # CONFIG_PCIEASPM_PERFORMANCE is not set
 CONFIG_PCIE_PME=y
 # CONFIG_PCIE_PTM is not set
@@ -2947,6 +2949,9 @@ CONFIG_QTI_SDPM_CLOCK_MONITOR=y
 # CONFIG_QTI_LIMITS_ISENSE_CDSP is not set
 CONFIG_QTI_CPU_HOTPLUG_COOLING_DEVICE=y
 CONFIG_QTI_DDR_COOLING_DEVICE=y
+CONFIG_MAX31760_FAN_CONTROLLER=y
+# CONFIG_QTI_LMH_CPU_VDD_COOLING_DEVICE is not set
+# CONFIG_QTI_CX_IPEAK_COOLING_DEVICE is not set
 # end of Qualcomm thermal drivers
 
 CONFIG_QTI_THERMAL=y
